[tool.poetry]
name = "sneksitter"
version = "0.1.0"
description = ""
authors = ["Pedro Batista <pedrovhb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tree-sitter = "^0.20.2"
tree-sitter-languages = "^1.8.0"
rich = {version = "^13.6.0", extras = ["rich,all"]}
intervaltree = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.331"
black = "^23.9.1"
usort = "^1.0.7"
pytest = "^7.4.2"
snoop = "^0.4.3"
icecream = "^2.1.3"
anytree = "^2.12.0"
pydantic = "^2.4.2"
libcst = "^1.1.0"
ipython = "^8.17.2"
jinja2 = "^3.1.2"


[tool.poetry.group.jedi.dependencies]
jedi = "^0.19.1"


[tool.poetry.group.experimental.dependencies]
anytree = "^2.12.0"
tree-sitter = "^0.20.2"
tree-sitter-languages = "^1.8.0"
magentic = "^0.8.0"
wrapt = "^1.16.0"
pyperclip = "^1.8.2"
panel = "^1.3.4"
snoop = "^0.4.3"
prompt-toolkit = "^3.0.41"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Configure black
[tool.black]
line-length = 100
